karpenter-mpol/set-karpenter-non-cpu-limits/.kyverno-test/pod-ephemeral-storage-patched2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test2
  namespace: test
spec:
  containers:
    - name: test2
      image: test/test:latest
      resources:
        requests:
          memory: "1Gi"
          ephemeral-storage: "1Gi"
        limits:
          cpu: "1"
          memory: "1Gi"
          ephemeral-storage: "1Gi"
