karpenter-mpol/set-karpenter-non-cpu-limits/.kyverno-test/pod-memory-patched3.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test3
  namespace: test
spec:
  containers:
    - name: test3
      image: test/test:latest
      resources:
        limits:
          cpu: "1"
          memory: "1Gi"
          ephemeral-storage: "1Gi"
        requests:
          cpu: "1"
          memory: "1Gi"
          ephemeral-storage: "1Gi"
