karpenter-mpol/set-karpenter-non-cpu-limits/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: set-karpenter-non-cpu-limits
policies:
- ../set-karpenter-non-cpu-limits.yaml
resources:
- resources.yaml
results:
- kind: Pod
  patchedResources: pod-ephemeral-storage-patched1.yaml
  policy: set-karpenter-non-cpu-limits
  resources:
  - test/test1
  result: pass
  isMutatingPolicy: true
- kind: Pod
  patchedResources: pod-ephemeral-storage-patched2.yaml
  policy: set-karpenter-non-cpu-limits
  resources:
  - test/test2
  result: pass
  isMutatingPolicy: true
- kind: Pod
  patchedResources: pod-ephemeral-storage-patched3.yaml
  policy: set-karpenter-non-cpu-limits
  resources:
  - test/test3
  result: pass
  isMutatingPolicy: true
- kind: Pod
  patchedResources: pod-memory-patched1.yaml
  policy: set-karpenter-non-cpu-limits
  resources:
  - test/test1
  result: pass
  isMutatingPolicy: true
- kind: Pod
  patchedResources: pod-memory-patched2.yaml
  policy: set-karpenter-non-cpu-limits
  resources:
  - test/test2
  result: pass
  isMutatingPolicy: true
- kind: Pod
  patchedResources: pod-memory-patched3.yaml
  policy: set-karpenter-non-cpu-limits
  resources:
  - test/test3
  result: pass
  isMutatingPolicy: true
- kind: Pod
  patchedResources: pod-memory-patched4.yaml
  policy: set-karpenter-non-cpu-limits
  resources:
  - test/test4
  result: skip
  isMutatingPolicy: true
